[gd_scene load_steps=18 format=2]

[ext_resource path="res://logo/LogoContainer.gd" type="Script" id=1]
[ext_resource path="res://logo/hand0.png" type="Texture" id=2]
[ext_resource path="res://logo/text.png" type="Texture" id=3]
[ext_resource path="res://logo/hand1.png" type="Texture" id=4]
[ext_resource path="res://logo/splash.wav" type="AudioStream" id=5]
[ext_resource path="res://logo/DrawCircle.gd" type="Script" id=6]
[ext_resource path="res://logo/godot.png" type="Texture" id=7]
[ext_resource path="res://logo/godot.ogg" type="AudioStream" id=8]
[ext_resource path="res://logo/rating.png" type="Texture" id=9]
[ext_resource path="res://logo/thebox.tscn" type="PackedScene" id=10]

[sub_resource type="ViewportTexture" id=7]
viewport_path = NodePath("LogoContainer/TheBoxV")

[sub_resource type="Animation" id=4]
resource_name = "RESET"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Rating:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Rating:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../CoverRect:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TextureRect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BackHand:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("FrontHand:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Name:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("DrawCircle:radius_scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "fadeout"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("../Rating:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "godot"
length = 3.1
tracks/0/type = "value"
tracks/0/path = NodePath("../CoverRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 2.3, 3 ),
"transitions": PoolRealArray( 0.241484, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DrawCircle:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.141176, 0.137255, 0.384314, 1 ), Color( 0.141176, 0.137255, 0.384314, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextureRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 8 )
} ],
"times": PoolRealArray( 0 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("TextureRect:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 3 ),
"transitions": PoolRealArray( 0.3, 3, 3 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("TextureRect:rect_rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 0.5, -2, 1 ),
"update": 0,
"values": [ 106.9, -2.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Rating:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("DrawCircle:radius_scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 0, 0, 0, 0.02, 0.3, 0.75, -0.2, -0.16, 0, 0, 2.5, 0, 0, 0, 0 ),
"times": PoolRealArray( 0, 0.3, 3 )
}
tracks/8/type = "method"
tracks/8/path = NodePath("AudioStreamPlayer2")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("DrawCircle:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=1]
resource_name = "haitouch"
length = 3.01667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("FrontHand:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.697, 1.003, 1.496 ),
"transitions": PoolRealArray( 1, 3.13834, 0.297302, 1 ),
"update": 0,
"values": [ 5.0, 5.0, -2.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackHand:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.697, 1.003, 1.496 ),
"transitions": PoolRealArray( 1, 3.13834, 0.297302, 1 ),
"update": 0,
"values": [ -5.0, -5.0, 2.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Name:rect_scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.003, 1.496 ),
"transitions": PoolRealArray( 1, 0.35, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.5, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Name:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.003, 1.309, 2.907, 3.009 ),
"transitions": PoolRealArray( 1, 1, 1, 1e+06, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BackHand:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.697, 1.003 ),
"transitions": PoolRealArray( 1, 2.37841, 1 ),
"update": 0,
"values": [ Vector2( -108, 0 ), Vector2( -108, 0 ), Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("FrontHand:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.697, 1.003 ),
"transitions": PoolRealArray( 1, 2.37841, 1 ),
"update": 0,
"values": [ Vector2( 108, 0 ), Vector2( 108, 0 ), Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("BackHand:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.204, 2.907, 3.009 ),
"transitions": PoolRealArray( 1, 1, 1e+06, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("FrontHand:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.51, 0.697, 2.907, 3.009 ),
"transitions": PoolRealArray( 1, 1, 1e+06, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("DrawCircle:radius_scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.003, 2.006, 2.193 ),
"transitions": PoolRealArray( 1, 0.329877, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 2.5, 2.5 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../CoverRect:color")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 2.499, 3.009 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("DrawCircle:color")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.204 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.337255, 0.25098, 0.360784, 1 ), Color( 0.337255, 0.25098, 0.360784, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("TextureRect:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/12/type = "audio"
tracks/12/path = NodePath("AudioStreamPlayer")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}
tracks/13/type = "value"
tracks/13/path = NodePath("../Rating:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("../ColorRect:color")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 3, 3.009 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.227451, 0.168627, 0.247059, 1 ), Color( 0.227451, 0.168627, 0.247059, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("DrawCircle:visible")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
resource_name = "rating_fadein"
length = 0.75
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("../Rating:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "thebox"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("../CoverRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DrawCircle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="SplashScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Rating" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="RatingCover" type="ColorRect" parent="."]
margin_left = 624.0
margin_top = 648.0
margin_right = 1080.0
margin_bottom = 696.0
color = Color( 0, 0, 0, 1 )

[node name="LogoContainer" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -540.0
margin_top = -540.0
margin_right = 540.0
margin_bottom = 540.0
rect_scale = Vector2( 0.667, 0.667 )
rect_pivot_offset = Vector2( 540, 540 )
script = ExtResource( 1 )

[node name="DrawCircle" type="Control" parent="LogoContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 540, 540 )
script = ExtResource( 6 )

[node name="BackHand" type="TextureRect" parent="LogoContainer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -108.0
margin_right = -108.0
grow_horizontal = 2
grow_vertical = 2
rect_rotation = -5.0
rect_pivot_offset = Vector2( 600, 960 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FrontHand" type="TextureRect" parent="LogoContainer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 108.0
margin_right = 108.0
rect_rotation = 5.0
rect_pivot_offset = Vector2( 500, 1080 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="TextureRect" parent="LogoContainer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 540, 540 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="LogoContainer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -384.0
margin_top = -384.0
margin_right = 384.0
margin_bottom = 384.0
rect_min_size = Vector2( 768, 768 )
rect_rotation = 106.9
rect_scale = Vector2( 0.25, 0.25 )
rect_pivot_offset = Vector2( 384, 384 )
texture = ExtResource( 7 )
expand = true

[node name="TheBoxV" type="Viewport" parent="LogoContainer"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
render_target_update_mode = 3

[node name="s" parent="LogoContainer/TheBoxV" instance=ExtResource( 10 )]

[node name="TheBoxContainer" type="TextureRect" parent="LogoContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -420.0
margin_right = 420.0
rect_min_size = Vector2( 1920, 1080 )
texture = SubResource( 7 )
flip_v = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="LogoContainer"]
autoplay = "RESET"
anims/RESET = SubResource( 4 )
anims/fadeout = SubResource( 3 )
anims/godot = SubResource( 2 )
anims/haitouch = SubResource( 1 )
anims/rating_fadein = SubResource( 5 )
anims/thebox = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="LogoContainer"]
stream = ExtResource( 5 )
volume_db = -3.0
bus = "BGM"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="LogoContainer"]
stream = ExtResource( 8 )
volume_db = -3.0
bus = "BGM"

[node name="CoverRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )

[connection signal="animation_finished" from="LogoContainer/AnimationPlayer" to="LogoContainer" method="_on_AnimationPlayer_animation_finished"]
